wip: mockbank
